adds signup api, initializes database, gorm telemetery, logger
