# backend/docs/swagger.json
@@ -3,7 +3,7 @@
     "info": {
         "contact": {}
     },
-    "basePath": "/api/v1",
+    "basePath": "/products/procure-hub",
     "paths": {
         "/example/helloworld": {
             "get": {
@@ -27,6 +27,103 @@
                     }
                 }
             }
+        },
+        "/users/v1/signup": {
+            "post": {
+                "description": "Register a new user with the provided information.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Register a new user",
+                "parameters": [
+                    {
+                        "description": "User registration request",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "User registered successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.User": {
+            "description": "User model to create a new user",
+            "type": "object",
+            "required": [
+                "companyName",
+                "email",
+                "name",
+                "password",
+                "primaryOwnerID",
+                "userType"
+            ],
+            "properties": {
+                "companyName": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "primaryOwnerID": {
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "integer"
+                },
+                "userType": {
+                    "$ref": "#/definitions/models.userType"
+                }
+            }
+        },
+        "models.userType": {
+            "type": "string",
+            "enum": [
+                "primary_owner",
+                "client"
+            ],
+            "x-enum-varnames": [
+                "PrimaryOwner",
+                "Client"
+            ]
         }
     }
 }
